# EE-351-Electronic-circuits

./: generate_all_plots.py
notebooks/: ac_dc_converters.ipynb  ac_dc_rectifiers.ipynb  dc_ac_inverters.ipynb  dc_ac_inverters_chapter.ipynb  dc_dc_choppers.ipynb  dc_dc_choppers_chapter.ipynb
power-electronics-simulator/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  UPGRADE_PROGRESS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
power-electronics-simulator/.github/: pull_request_template.md
power-electronics-simulator/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
power-electronics-simulator/.github/workflows/: ci.yml  docs.yml
power-electronics-simulator/assets/dashboard/: style.css
power-electronics-simulator/docs/: conf.py  index.rst
power-electronics-simulator/docs/api/: index.rst
power-electronics-simulator/docs/theory/: ac_dc.md  dc_ac.md  dc_dc.md
power-electronics-simulator/examples/: compare_dc_dc_converters.py  run_buck_simulation.py  run_full_bridge_rectifier.py  run_spwm_inverter.py
power-electronics-simulator/notebooks/: 01_Theory_AC_DC_Converters.ipynb  02_Interactive_AC_DC_Waveforms.ipynb  03_Theory_DC_AC_Inverters.ipynb  04_Interactive_DC_AC_Waveforms.ipynb  05_Theory_DC_DC_Converters.ipynb  06_Interactive_DC_DC_Waveforms.ipynb  07_Harmonic_Analysis_and_THD.ipynb  08_Converter_Comparison.ipynb
power-electronics-simulator/power_electronics/: __init__.py
power-electronics-simulator/power_electronics/converters/: __init__.py
power-electronics-simulator/power_electronics/converters/ac_dc/: __init__.py  full_bridge.py  full_wave_centertap.py  half_wave.py  scr_full_bridge.py  scr_half_wave.py  three_phase_bridge.py  three_phase_half.py  vienna_rectifier.py
power-electronics-simulator/power_electronics/converters/dc_ac/: __init__.py  cascaded_hbridge.py  npc_inverter.py  push_pull.py  single_phase_hbridge.py  three_phase_vsi.py
power-electronics-simulator/power_electronics/converters/dc_dc/: __init__.py  _common.py  boost.py  buck.py  buck_boost.py  cuk.py  dual_active_bridge.py  flyback.py  forward.py  sepic.py
power-electronics-simulator/power_electronics/core/: __init__.py  analysis.py  base_converter.py  signal_generator.py  simulation_engine.py
power-electronics-simulator/power_electronics/dashboard/: app.py  callbacks.py  export.py  layout.py
power-electronics-simulator/power_electronics/dashboard/components/: __init__.py  metrics_panel.py  sidebar.py  spectrum_panel.py  theory_panel.py  waveform_panel.py
power-electronics-simulator/power_electronics/visualization/: __init__.py  interactive.py  plotter.py  themes.py
power-electronics-simulator/tests/: conftest.py  test_analysis.py  test_export.py  test_registry_and_themes.py  test_simulation_engine.py
power-electronics-simulator/tests/test_ac_dc/: test_centertap.py  test_full_bridge.py  test_half_wave.py  test_scr_controlled.py  test_three_phase_bridge.py  test_three_phase_half.py  test_vienna.py
power-electronics-simulator/tests/test_dc_ac/: test_cascaded_hbridge.py  test_hbridge.py  test_npc.py  test_push_pull.py  test_three_phase_vsi.py
power-electronics-simulator/tests/test_dc_dc/: test_boost.py  test_buck.py  test_buck_boost.py  test_cuk.py  test_dab.py  test_flyback.py  test_forward.py  test_sepic.py
power_sim/: __init__.py  ac_dc.py  dc_ac.py  dc_dc.py  loads.py  plotter.py  utils.py
