[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-electronics-simulator"
version = "0.1.0"
description = "Interactive simulation toolkit for AC-DC, DC-DC, and DC-AC power converters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "plotly>=5.22.0",
  "dash>=2.17.0",
  "dash-katex>=0.0.1",
  "ipywidgets>=8.1.0",
  "schemdraw>=0.19",
  "pandas>=2.2.0",
  "pytest>=8.2.0",
  "black>=24.0.0",
  "mypy>=1.10.0"
]
