[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-electronics-simulator"
version = "0.2.0"
description = "Interactive simulation toolkit for AC-DC, DC-DC, and DC-AC power converters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Power Electronics Contributors", email = "contact@power-electronics-sim.io" }
]
keywords = [
  "power-electronics",
  "converters",
  "simulation",
  "dashboard",
  "ac-dc",
  "dc-dc",
  "dc-ac",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "plotly>=5.22.0",
  "dash>=2.17.0",
  "dash-katex>=0.0.1",
  "ipywidgets>=8.1.0",
  "schemdraw>=0.19",
  "pandas>=2.2.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
  "mypy>=1.10.0",
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=1.25.0",
]
notebooks = [
  "jupyter>=1.0.0",
  "nbconvert>=7.0.0",
]
all = [
  "power-electronics-simulator[dev,notebooks]",
]

[project.urls]
"Homepage" = "https://github.com/you/power-electronics-simulator"
"Documentation" = "https://power-electronics-sim.readthedocs.io"
"Repository" = "https://github.com/you/power-electronics-simulator.git"
"Bug Tracker" = "https://github.com/you/power-electronics-simulator/issues"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "scipy.*",
  "plotly.*",
  "dash.*",
  "dash_katex.*",
  "schemdraw.*",
  "ipywidgets.*",
  "reportlab.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
target_version = "py311"
skip_glob = [".venv/*"]
known_first_party = ["power_electronics"]
known_third_party = ["numpy", "scipy", "matplotlib", "plotly", "dash", "pandas"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  ".eggs",
  "*.egg-info",
]
per-file-ignores = [
  "__init__.py:F401",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=power_electronics --cov-report=term-missing --cov-fail-under=85 --verbose"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["power_electronics"]
omit = [
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pass",
]
precision = 2
skip_covered = false
