[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-electronics-simulator"
version = "2.0.0"
description = "Publication-quality interactive simulation toolkit for AC-DC, DC-DC, and DC-AC power converters with oscilloscope-grade dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["power electronics", "converter", "simulation", "dash", "plotly"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (Schematics/Netlists)",
]
dependencies = [
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "plotly>=5.22.0",
  "dash>=2.17.0",
  "dash-katex>=0.0.1",
  "ipywidgets>=8.1.0",
  "schemdraw>=0.19",
  "pandas>=2.2.0",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "bandit>=1.7.0",
]
docs = [
  "sphinx>=7.3.0",
  "sphinx-autodoc-typehints>=2.1.0",
  "myst-parser>=3.0.0",
]

[project.scripts]
power-sim = "power_electronics.dashboard.app:main"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
