[metadata]
name = power-electronics-simulator
version = 0.1.0
author = Open Source Community
license = MIT
description = Interactive Python simulator for power electronics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/power-electronics-simulator

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    numpy>=1.26.0
    scipy>=1.11.0
    matplotlib>=3.8.0
    plotly>=5.22.0
    dash>=2.17.0
    dash-katex>=0.0.1
    ipywidgets>=8.1.0
    schemdraw>=0.19
    pandas>=2.2.0

[options.extras_require]
dev =
    pytest>=8.2.0
    pytest-cov>=5.0.0
    black>=24.0.0
    isort>=5.13.0
    flake8>=7.1.0
    mypy>=1.10.0
    pre-commit>=3.7.0
    sphinx>=7.3.0
    sphinx-rtd-theme>=2.0.0
    myst-parser>=3.0.1

[options.packages.find]
exclude =
    tests
    notebooks

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[tool:pytest]
addopts = -ra -q
testpaths = tests

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
